Fix head invisible

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: right;
   max-width: 100%;
   height: 100%;
   margin: auto;
@@ -57,11 +55,8 @@
 }
 
 .App-textbox { 
-  flex: 1; 
-  justify-content: center;
-  align-items: stretch;
+  display:flex;
   color: rgb(255, 255, 255);
-  display: flex;
   border: 1px solid white;
 }
 
@@ -98,6 +93,8 @@
 
   .App-chatroom{
     background-color: white;
+    display: flex;
+    flex-direction: column;
   }
 
   .App-chatroom-text {
